Fix login text alignment

--- a/static/scss/login.scss
+++ b/static/scss/login.scss
@@ -21,6 +21,7 @@ $grey_light: #B6B6B6;
     padding: 80px 50px 70px 50px; 
     background: $white;
     color: $black;
+    text-align: left;
     h1{
         margin: 0;
     }
